--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/docker-test.ini
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/docker-test.ini
@@ -11,6 +11,8 @@
 # error_email_from = ckan-errors@example.com
 
 [app:main]
+ckan.search.enabled = false
+solr_url = http://disabled
 use = egg:ckan
 debug = false
 testing = false
@@ -25,7 +27,6 @@ ckan.datastore.write_url = postgresql://ckan:ckan@ckan-postgres/ckan
 ckan.datastore.read_url = postgresql://ckan:ckan@ckan-postgres/ckan
 
 ## Solr support - using Docker service name
-solr_url = http://ckan-solr:8983/solr/ckan
 
 # Redis URL - using Docker service name
 ckan.redis.url = redis://ckan-redis:6379/1
