--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-infrastructure/docker-compose.arm64.yml
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-infrastructure/docker-compose.arm64.yml
@@ -10,7 +10,7 @@ services:
     image: "postgres:12"
     environment:
       POSTGRES_USER: ckan
-      POSTGRES_PASSWORD: ckan
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ckan}
 
   ckan-redis:
     networks:
@@ -20,7 +20,7 @@ services:
   ckan-solr:
     networks:
       - default
-    image: "solr:8-slim"  # Use standard Solr instead of CKAN-specific
+    image: "solr:8-slim"  # Temporarily back to solr:8-slim for testing
     ports:
       - "8983:8983"
     command:
@@ -33,16 +33,16 @@ services:
       - default
     environment:
       HOME: /usr/src
-      ENV_SECRET_KEY: ${CKAN_SECRET_KEY:-test-secret-key-for-development-only}
-      CKAN_DATASTORE_POSTGRES_DB: datastore_test
-      CKAN_DATASTORE_POSTGRES_READ_USER: datastore_read
-      CKAN_DATASTORE_POSTGRES_READ_PWD: pass
-      CKAN_DATASTORE_POSTGRES_WRITE_USER: datastore_write
-      CKAN_DATASTORE_POSTGRES_WRITE_PWD: pass
-      CKAN_POSTGRES_DB: ckan_test
-      CKAN_POSTGRES_USER: ckan_default
-      CKAN_POSTGRES_PWD: pass
-      PGPASSWORD: ckan
+      ENV_SECRET_KEY: ${ENV_SECRET_KEY:-REPLACE_WITH_ACTUAL_SECRET}
+      CKAN_DATASTORE_POSTGRES_DB: ${CKAN_DATASTORE_POSTGRES_DB:-datastore_test}
+      CKAN_DATASTORE_POSTGRES_READ_USER: ${CKAN_DATASTORE_POSTGRES_READ_USER:-datastore_read}
+      CKAN_DATASTORE_POSTGRES_READ_PWD: ${CKAN_DATASTORE_POSTGRES_READ_PWD:-REPLACE_WITH_ACTUAL_SECRET}
+      CKAN_DATASTORE_POSTGRES_WRITE_USER: ${CKAN_DATASTORE_POSTGRES_WRITE_USER:-datastore_write}
+      CKAN_DATASTORE_POSTGRES_WRITE_PWD: ${CKAN_DATASTORE_POSTGRES_WRITE_PWD:-REPLACE_WITH_ACTUAL_SECRET}
+      CKAN_POSTGRES_DB: ${CKAN_POSTGRES_DB:-ckan_test}
+      CKAN_POSTGRES_USER: ${CKAN_POSTGRES_USER:-ckan_default}
+      CKAN_POSTGRES_PWD: ${CKAN_POSTGRES_PWD:-REPLACE_WITH_ACTUAL_SECRET}
+      PGPASSWORD: ${POSTGRES_PASSWORD:-REPLACE_WITH_ACTUAL_SECRET}
       PYTEST_COMMON_OPTIONS: -v --ckan-ini=test-core-ci.ini --cov=ckan --cov=ckanext --junitxml=~/junit/junit.xml
       # report usage of deprecated features
       SQLALCHEMY_WARN_20: 1
