🎉 Phase 1: Analytics Pipeline Implementation Complete
✅ CORE FEATURES IMPLEMENTED:
- Event tracking database models with privacy protection
- CLI commands for database management and statistics
- Action interceptors for dataset views, searches, and downloads
- CKAN plugin integration with IActions, IClick, IResourceController

✅ PRIVACY-FIRST DESIGN:
- Hash user sessions instead of storing IPs
- Respect Do Not Track headers
- Optional user tracking for logged-in users only
- JSONB metadata storage for flexible event data

✅ ANALYTICS CAPABILITIES:
- Track dataset views, searches, and resource downloads
- Popular datasets and search terms analysis
- Event statistics with customizable time ranges
- CLI dashboard: `ckan analytics stats --days 30`

✅ DATABASE SCHEMA:
- analytics_events table with UUID primary keys
- Event types: dataset_view, search_query, resource_download, api_call
- Metadata: user_agent, referrer, event_data (JSON)
- Indexes on event_type, dataset_id, timestamp for performance

✅ TESTING VERIFIED:
- Extension installation successful
- Database tables created
- CLI commands functional
- Plugin loading confirmed

📊 Ready for Phase 1.2: Implement web dashboard UI
🚀 Foundation complete for analytics-driven CKAN modernization

--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-core.ini
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-core.ini
@@ -60,7 +60,7 @@ ckan.extra_resource_fields = alt_url
 
 apitoken_header_name = Authorization
 
-ckan.plugins =
+ckan.plugins = analytics
 # ckan.views.default_views =
 
 # mailer
