--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-core.ini
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-core.ini
@@ -60,7 +60,7 @@ ckan.extra_resource_fields = alt_url
 
 apitoken_header_name = Authorization
 
-ckan.plugins = analytics
+ckan.plugins = analytics scheming_datasets
 # ckan.views.default_views =
 
 # mailer
@@ -114,3 +114,4 @@ formatter = generic
 
 [formatter_generic]
 format = %(asctime)s %(levelname)-5.5s [%(name)s] %(message)s
+scheming.dataset_schemas = ckanext.scheming:city_dataset_schema.yaml
