--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-phase3.ini
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-phase3.ini
@@ -29,7 +29,7 @@ ckan.site_logo = /base/images/ckan-logo.png
 ckan.site_description = Testing Advanced Search & Discovery Features
 
 # Database settings
-sqlalchemy.url = postgresql://ckan_default:pass@ckan-postgres/ckan_default
+sqlalchemy.url = postgresql://ckan_default:ckan@ckan-postgres/ckan_test
 # ckan.datastore.write_url = postgresql://ckan_default:pass@ckan-postgres/datastore_default
 # ckan.datastore.read_url = postgresql://datastore_default:pass@ckan-postgres/datastore_default
 
