Fix: Restore metadata schema alongside analytics plugin
- Add scheming_datasets to ckan.plugins list
- Configure scheming.dataset_schemas = ckanext.scheming:city_dataset_schema.yaml
- Configure scheming.presets = ckanext.scheming:presets.json
- Both custom metadata fields and analytics tracking now working simultaneously
- CKAN running successfully on localhost:5001

--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-phase3.ini
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-phase3.ini
@@ -44,13 +44,15 @@ ckan.search.solr_allowed_query_parsers = field
 ckan.storage_path = /var/lib/ckan
 
 # Extensions - THIS IS THE KEY PART FOR PHASE 3 TESTING
-ckan.plugins = analytics search_enhanced
+ckan.plugins = scheming_datasets analytics search_enhanced
 
 # Phase 1: Analytics settings
 ckanext.analytics.enable_debug = true
 ckanext.analytics.track_api = true
 
 # Phase 2: Scheming settings
+scheming.dataset_schemas = ckanext.scheming:city_dataset_schema.yaml
+scheming.presets = ckanext.scheming:presets.json
 
 # Phase 3: Search Enhanced settings
 ckanext.search_enhanced.related_datasets.limit = 5
